--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "koochik/koochik",
-    "description": "A simple PHP kernel",
+    "description": "A simple, elegant, and easy-to-understand PHP HTTP kernel inspired by Slim framework.",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -15,7 +15,7 @@
     },
     "authors": [
         {
-            "name": "doctor",
+            "name": "Sepehr Shariati",
             "email": "emailedoctor@gmail.com"
         }
     ],
@@ -27,5 +27,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.1"
-    }
+    },
+    "minimum-stability": "dev"
 }
