--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Koochik\\Koochik\\": "src/Koochik/"
+            "Koochik\\Koochik\\": "src/"
         }
     },
     "autoload-dev": {
